# sensor_core

./: .gitignore  README.md  __init__.py  fastring.cp312-win_amd64.pyd  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml
MABOS_core/: __init__.py  sensor_manager.py
MABOS_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MABOS_core/data/: data_manager.py
MABOS_core/memory/: __init__.py  mem_manager.py  strg_manager.py
MABOS_core/plot/: _plot_utils.py  plot_manager.py
MABOS_core/serial/: ser_manager.py
MABOS_core/utils/: __init__.py  central_manager.py  data_manager.py  mem_manager.py  plot_manager.py  utils.py
examples/: MABOS_PPG.ipynb  Optimization.ipynb  Untitled.ipynb  custom_serial_acquisition.ipynb  custom_serial_handler.ipynb  modular_plotting.ipynb  sensor_manager_plotting.ipynb  serial_db.hdf5  virtual_serial_port.ipynb  virtual_serial_port_image.ipynb  virtual_serial_port_line.ipynb  virtual_serial_port_line_dsp.ipynb
examples/.ipynb_checkpoints/: Bandwidth-checkpoint.ipynb  Untitled-checkpoint.ipynb  custom_serial_acquisition-checkpoint.ipynb  sensor_manager_plotting-checkpoint.ipynb  virtual_serial_port-checkpoint.ipynb  virtual_serial_port_line-checkpoint.ipynb
paper/: paper.bib  paper.md
sensor_core/: __init__.py  sensor_manager.py
sensor_core/.ipynb_checkpoints/: __init__-checkpoint.py  sensor_manager-checkpoint.py
sensor_core/data/: Untitled.ipynb  __init__.py  data_manager.py
sensor_core/dsp/: __init__.py  (+6 more)
sensor_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+23 files in other folders)
